2002-12-11  Till Kamppeter <till.kamppeter@gmx.net>

	* db/source/opt/*.xml: Renamed all "Mode" options into something
	  more user-friendly, as "Resolution" or "ColorMode". This is
	  needed to make possible "PrintoutMode" as a nmae for the
	  principal composite option for all printers/drivers. Renamed
	  also "PrintingMode" options to make the option names more
	  ergonomic (Having both "PrintingMode" and "PrintoutMode" for the
	  same printer is very confusing).
	
2002-12-03  Till Kamppeter <till.kamppeter@gmx.net>

	* *: Tagged CVS to mark the last state where the database is equal
	  to the database of Foomatic 2.0.x. Afterwards new elements will
	  be added which make this package not working with Foomatic 2.0.x
	  any more and so these elements will not be mirrored to Foomatic
	  2.0.x.
	  Tag name: "last-state-equal-to-foomatic-2_0".
	
2002-11-30  Till Kamppeter <till.kamppeter@gmx.net>

	* db/source/opt/Postscript-PreFilter.xml: Added choice to the
	  "PreFilter" option of the "PostScript" driver which lets
	  GhostScript only embed fonts and not convert to another
	  PostScript level.
	
	* db/source/printer/HP-LaserJet_1000.xml: Added instructions
	  for uploading the firmware onto the HP LaserJet 1000.

	* db/source/printer/HP-DeskJet_3325.xml: Added HP DeskJet 3325.
	
2002-11-26  Till Kamppeter <till.kamppeter@gmx.net>

	* db/source/printer/*.xml: Added HP DesignJet 250C, 430, 450C,
	  455CA, 488CA, 700, 2500CP, Epson MJ 930C.

	* db/source/printer/*.xml: Text updates for the HP DesignJet 230,
	  750C, and 3500CP.

2002-11-23  Till Kamppeter <till.kamppeter@gmx.net>

	* db/source/printer/Epson-Stylus_CX*.xml: Added Epson Stylus CX5200,
	  updated text and rating for Epson Stylus CX3200.

	* db/source/printer/HP-LaserJet_4?00.xml: Added HP LaserJet 4200
	  and 4300.

	* db/source/driver/pxlmono.xml, db/source/driver/Postscript.xml,
	  db/source/opt/160.xml: Added HP LaserJet 4200 and 4300 to the
	  appropriate driver entries.
