@@ -8,6 +8,7 @@
    <en>PageSize</en><!-- backends only know <en> shortnames! -->
   </arg_shortname>
   <arg_execution>
+   <arg_group>General</arg_group>
    <arg_order>100</arg_order>
    <arg_spot>D</arg_spot>
    <arg_required />
