@@ -1,64 +1,65 @@
-<option type="enum" id="opt/drv_z42-InkType">
+<option type="enum" id="opt/drv_z42-PrintoutMode">
   <!-- A multilingual <comments> block can appear here, too;
        it should be treated as documentation for the user. -->
   <arg_longname>
-   <en>Ink Type</en>
+   <en>Printout Mode</en>
   </arg_longname>
   <arg_shortname>
-   <en>InkType</en><!-- backends only know <en> shortnames! -->
+   <en>PrintoutMode</en><!-- backends only know <en> shortnames! -->
   </arg_shortname>
   <arg_execution>
    <arg_group>General</arg_group>
-   <arg_order>100</arg_order>
-   <arg_spot>B</arg_spot>
-   <arg_substitution />
-   <arg_proto> mode=%s</arg_proto>
+   <arg_order>10</arg_order>
+   <arg_section>AnySetup</arg_section>
+   <arg_spot>A</arg_spot>
+   <arg_composite />
+   <!-- <arg_proto></arg_proto> -->
   </arg_execution>
   <constraints>
      <constraint sense="true">
       <driver>drv_z42</driver>
-      <arg_defval>ev/drv_z42-InkType-CMYK</arg_defval>
+      <arg_defval>ev/drv_z42-PrintoutMode-Normal</arg_defval>
      </constraint>
   </constraints>
   <enum_vals>
-   <enum_val id="ev/drv_z42-InkType-Gray">
+   <enum_val id="ev/drv_z42-PrintoutMode-Draft">
     <ev_longname>
-     <en>Grayscale (Black ink cartridge)</en>
+     <en>Draft</en>
     </ev_longname>
     <!-- A multilingual <comments> block can appear here, too;
          it should be treated as documentation for the user. -->
     <ev_shortname>
-     <en>Grayscale</en>
+     <en>Draft</en>
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
-    <ev_driverval>k</ev_driverval>
+    <ev_driverval>Resolution=300x600 Bidirectional=Yes</ev_driverval>
    </enum_val>
-   <enum_val id="ev/drv_z42-InkType-CMY">
+   <enum_val id="ev/drv_z42-PrintoutMode-Normal">
     <ev_longname>
-     <en>3-ink color (Color ink cartridge)</en>
+     <en>Normal</en>
     </ev_longname>
     <!-- A multilingual <comments> block can appear here, too;
          it should be treated as documentation for the user. -->
     <ev_shortname>
-     <en>CMY</en>
+     <en>Normal</en>
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
-    <ev_driverval>cmy</ev_driverval>
+    <ev_driverval>Resolution=600x600 Bidirectional=No</ev_driverval>
    </enum_val>
-   <enum_val id="ev/drv_z42-InkType-CMYK">
+   <enum_val id="ev/drv_z42-PrintoutMode-High">
     <ev_longname>
-     <en>4-ink color (Both ink cartridges)</en>
+     <en>High Quality</en>
     </ev_longname>
     <!-- A multilingual <comments> block can appear here, too;
          it should be treated as documentation for the user. -->
     <ev_shortname>
-     <en>CMYK</en>
+     <en>High</en>
      <!-- Until someone tells me how to learn the user locale in 
           backends, the shortname must be monolingual in <en>! -->
     </ev_shortname>
-    <ev_driverval>cmyk</ev_driverval>
+    <ev_driverval>Resolution=1200x600 Bidirectional=No</ev_driverval>
    </enum_val>
   </enum_vals>
 </option>
