@@ -8,6 +8,7 @@
    <en>Resolution</en><!-- backends only know <en> shortnames! -->
   </arg_shortname>
   <arg_execution>
+   <arg_group>PrintoutQuality</arg_group>
    <arg_order>110</arg_order>
    <arg_spot>D</arg_spot>
    <arg_required />
