@@ -1,3 +1,10 @@
+2002-12-17  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* db/source/opt/drv_z42-*.xml: Introduced composite option
+	  "PrintoutMode" for the "drv_z42" driver, Put the "PageSize",
+	  "InkType", and "PrintoutMode" into the "General" group, the
+	  other options into a group named "PrintoutQuality".
+	
 2002-12-11  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* db/source/opt/*.xml: Renamed all "Mode" options into something
